typescript/checker/tests/conformance/es6/spread/iteratorSpreadInArray7.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            213,
        ),
        hi: BytePos(
            218,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/spread/iteratorSpreadInArray7.ts:15:5
   |
15 | var array: symbol[];
   |     ^^^^^

